--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ php:
   - 5.6
   - hhvm
 
-script:
-  - vendor/bin/phpunit --verbose --coverage-text
+script: phpunit --verbose --coverage-text
 
 matrix:
   allow_failures:
