Still fixing Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
 language: php
 
+before_script:
+  - composer install --dev --prefer-source
+
+script: phpunit
+
 php:
   - 5.3
   - 5.4
   - 5.5
   - 5.6
-  - 7.0
+  - nightly
   - hhvm
-
-script: phpunit --coverage-text
 
 matrix:
   allow_failures:
