--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: php
 before_script:
   - composer install --dev --prefer-source
 
-script: phpunit
+script: phpunit --coverage-text
 
 php:
   - 5.3
