--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.0",
+        "phpunit/php-invoker": "*"
     },
     "autoload": {
         "psr-0": {
